<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".SignupWithEmailActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/login_logo" />

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/email_pw_shape"
        android:drawableLeft="@drawable/ic_person_black"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/email_pw_shape"
        android:drawableLeft="@drawable/ic_lock_black"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_agree_to_terms_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@null"
            android:text="@string/msg_agree_to_terms_of_service"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_terms_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@null"
            android:text="@string/action_terms_of_service"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_signup_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_shape"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/action_sign_up"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

</LinearLayout>