<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainSignupActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/login_logo" />

    <Button
        android:id="@+id/btn_continue_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_shape"
        android:drawableLeft="@drawable/ic_facebook"
        android:shadowColor="@android:color/transparent"
        android:text="@string/action_continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_continue_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_shape"
        android:drawableLeft="@drawable/ic_google"
        android:shadowColor="@android:color/transparent"
        android:text="@string/action_continue_with_google"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/lbl_separator"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tv_separator"
            android:background="@color/colorMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tv_separator"
            android:background="@color/colorMedium" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_signup_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_shape"
        android:drawableLeft="@drawable/ic_email"
        android:shadowColor="@android:color/transparent"
        android:text="@string/action_signup_with_email"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_link_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/action_link_to_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>